// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should handle change of checked 1`] = `
<scale-radio-button checked="false" inputid="testing">
  <label class="radio-button">
    <input id="input-1" type="radio" value="">
  </label>
</scale-radio-button>
`;

exports[`RadioButton should match snapshot 1`] = `
<scale-radio-button>
  <label class="radio-button">
    <input id="input-0" type="radio" value="">
  </label>
</scale-radio-button>
`;
